# calamares

./: .gdbinit  .gitignore  CMakeLists.txt  PKGBUILD  calamares.desktop  mk  settings.conf
data/: welcome
data/skel/: .bashrc  .directory
data/skel/mate/: .bashrc
lang/: calamares_en.ts
src/branding/parabola/: COPYING  branding.desc  show.qml
src/calamares/: CMakeLists.txt  CalamaresWindow.cpp  CalamaresWindow.h
src/libcalamares/: CMakeLists.txt  GlobalStorage.cpp  GlobalStorage.h  Job.cpp  Job.h  JobQueue.cpp  PacstrapCppJob.cpp  PacstrapCppJob.h
src/libcalamaresui/: Branding.cpp  Branding.h  ViewManager.cpp
src/libcalamaresui/utils/: CalamaresUtilsGui.h
src/modules/bootloader/: bootloader.conf  main.py
src/modules/desktop/: CMakeLists.txt  desktop.conf  desktop.cpp  desktop.h  module.desc
src/modules/grubcfg/: main.py
src/modules/initcpio/: initcpio.conf
src/modules/locale/: LocalePage.cpp
src/modules/localecfg/: main.py
src/modules/machineid/: machineid.conf
src/modules/netinstall/: NetInstallPage.cpp  NetInstallPage.h  NetInstallViewStep.cpp  NetInstallViewStep.h  netinstall.conf  page_netinst.ui
src/modules/pacstrap/: CMakeLists.txt  module.desc  pacstrap-calamares  pacstrap.conf  pacstrap.cpp  pacstrap.h
src/modules/pacstrap-base/: CMakeLists.txt  module.desc  pacstrap-base.conf  pacstrap-base.cpp  pacstrap-base.h
src/modules/pacstrap-extra/: pacstrap-extra.cpp  pacstrap-extra.h
src/modules/pacstrap-gui/: CMakeLists.txt  module.desc  pacstrap-gui.conf  pacstrap-gui.cpp  pacstrap-gui.h
src/modules/services/: main.py  (+1 more)
(+28 files in other folders)
